--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -26,7 +26,7 @@
 
     header {
       h1 {
-        font-size: 4em;
+        font-size: 3.5em;
       }
     }
 
@@ -93,14 +93,13 @@
         display: block;
 
         h1 {
-          font-size: 3.5em;
           margin-bottom: 30px;
         }
 
         nav {
           a {
             display: inline-block;
-            width: 12em;
+            width: 100%;
           }
         }
 
