--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav>
-  <a class='fa fa-twitter'   href=https://twitter.com/lisasmolkin>    &nbsp;&nbsp; @lisasmolkin</a>
-  <a class='fa fa-instagram' href=https://instagram.com/lisasmolkin/> &nbsp;&nbsp; @lisasmolkin</a>
-  <a class='fa fa-vimeo'     href=https://vimeo.com/user48322110>     &nbsp;&nbsp; Lisa Smolkin</a>
-  <a class='fa fa-envelope'  href=mailto:lisasmolkin@gmail.com>       &nbsp;&nbsp; lisasmolkin@gmail.com</a>
+  <a class='fa fa-twitter'   href=https://twitter.com/lisasmolkin>    <span>@lisasmolkin</span></a>
+  <a class='fa fa-instagram' href=https://instagram.com/lisasmolkin/> <span>@lisasmolkin</span></a>
+  <a class='fa fa-vimeo'     href=https://vimeo.com/user48322110>     <span>Lisa Smolkin</span></a>
+  <a class='fa fa-envelope'  href=mailto:lisasmolkin@gmail.com>       <span>lisasmolkin@gmail.com</span></a>
 </nav>
