--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -27,11 +27,16 @@ body {
         margin-top: 7px;
 
         a {
-          padding-right: 20px;
-          display: block;
           color: black;
+          display: block;
           font-size: 1em;
           margin-bottom: .7em;
+          padding-right: 20px;
+
+          span {
+            font-family: helvetica, arial, sans-serif;
+            margin-left: 1em;
+          }
         }
 
         a:hover {
@@ -54,7 +59,7 @@ body {
         color: white;
 
         iframe {
-          background: yellow;
+          // background: yellow;
           width: 640px;
           height: 360px;
         }
