--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,12 +6,19 @@
   </header>
 
   <main>
-    <div id=video>
-      <iframe src="https://player.vimeo.com/video/262307924?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
-    <script src="https://player.vimeo.com/api/player.js"></script>
+    <img src=images/lisa-shrugs.gif>
 
     <section id=bio>
+
+      {% include form.html %}
+
+      <br>
+
+      <hr>
+
+      <br>
+      <br>
+
       <img src=/images/lisa.jpg>
       {{ content }}
     </section>
