--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -1,6 +1,12 @@
 @media (max-width: 1100px) {
   body #container {
       header {
+        display: block;
+
+        h1 {
+          margin-bottom: 30px
+        }
+
         nav {
           a {
             padding: 0;
@@ -18,6 +24,7 @@
     }
   }
 }
+
 
 @media (max-width: 1000px) {
   body #container {
