--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -10,6 +10,9 @@ body {
       // display: grid;
       // grid-template-columns: auto auto;
       // grid-template-areas: 'name nav';
+          display: flex;
+      justify-content: center;
+      text-align: center;
       margin-bottom: 2em;
 
       h1 {
