sign up form should be centered

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -36,6 +36,16 @@ body {
         padding: 60px 0 10px 3%;
       }
 
+
+      #mc_embed_signup {
+        display: flex;
+        /* position: relative; */
+        text-align: center;
+        width: 50%;
+        margin: 0 auto;
+        padding: 60px 0 10px 3%;
+      }
+
       #video {
         background: blue;
         // grid-area: video;
