still fixing header

--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -2,6 +2,10 @@
   body #container {
       header {
 
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 2em;
 
         h1 {
           margin-bottom: 30px
@@ -106,7 +110,7 @@
 
       header {
         // background: orange;
-        display: block;
+        // display: block;
 
         h1 {
           margin-bottom: 30px;
