--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -5,7 +5,6 @@
         display: flex;
         justify-content: center;
         text-align: center;
-        margin-bottom: 2em;
 
         h1 {
           margin-bottom: 30px
@@ -45,6 +44,11 @@
     padding: 0;
 
     header {
+
+        display: flex;
+        justify-content: center;
+        text-align: center;
+
       h1 {
         font-size: 3.5em;
       }
@@ -84,9 +88,18 @@
 
       header {
         // background: yellow;
+        display: flex;
+        justify-content: center;
+        text-align: center;
         padding: 0 2em;
 
-        nav {
+      #bio {
+        padding: 1em;
+      }
+    }
+
+    footer {
+          nav {
           // background: lightgreen;
 
           a {
@@ -94,10 +107,6 @@
             padding: 0;
           }
         }
-      }
-
-      #bio {
-        padding: 1em;
       }
     }
   }
@@ -111,18 +120,14 @@
       header {
         // background: orange;
         // display: block;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+
 
         h1 {
           margin-bottom: 30px;
         }
-
-        nav {
-          a {
-            display: inline-block;
-            width: 100%;
-          }
-        }
-
       }
 
       main {
@@ -150,6 +155,15 @@
             // background: orange;
             margin: 0 1em 1em;
           }
+        }
+
+        footer {
+           nav {
+          a {
+            display: inline-block;
+            width: 100%;
+          }
+        }
         }
 
       }
