--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -25,7 +25,7 @@ body {
     }
 
     main {
-      background: red;
+      // background: red;
 
       #mc_embed_signup form {
         display: flex !important;
