--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -4,6 +4,9 @@ body {
   #container {
     padding: 2em;
     max-width: 1200px;
+     display: flex;
+    justify-content: center;
+    text-align: center;
 
     header {
       background: lightgreen;
