fixed syntax errors

--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -2,9 +2,9 @@
   body #container {
       header {
 
-        display: flex important!;
-        justify-content: center important!;
-        text-align: center important!;
+        display: flex !important;
+        justify-content: center !important;
+        text-align: center !important;
 
 
         h1 {
