--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -30,23 +30,23 @@ body {
     main {
       // background: red;
 
-      #mc_embed_signup form {
-        display: flex !important;
-        /* position: relative; */
-        text-align: center !important;
-        width: 50%;
-        margin: 0 auto !important;
-        padding: 60px 0 10px 3% !important;
-      }
+      // #mc_embed_signup form {
+      //   display: flex !important;
+      //   /* position: relative; */
+      //   text-align: center !important;
+      //   width: 50%;
+      //   margin: 0 auto !important;
+      //   padding: 60px 0 10px 3% !important;
+      // }
 
-      #mc_embed_signup {
-        display: flex !important;
-        /* position: relative; */
-        text-align: center !important;
-        width: 50%;
-        margin: 0 auto !important;
-        padding: 60px 0 10px 3%;
-      }
+      // #mc_embed_signup {
+      //   display: flex !important;
+      //   /* position: relative; */
+      //   text-align: center !important;
+      //   width: 50%;
+      //   margin: 0 auto !important;
+      //   padding: 60px 0 10px 3%;
+      // }
 
       #video {
         background: blue;
