fixing logo size

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,8 +1,11 @@
   </div><!--container-->
 
+  <div class='logo'>
     <img src=images/oac.png>
+  </div>
+  <div class='logo'>
     <img src=images/tac.jpg>
-
+  </div>
 
 </body>
 </html>
