--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,9 +1,10 @@
   </div><!--container-->
 
-  <div class='logo'>
+  <div class="logo">
     <img src=images/oac.png>
   </div>
-  <div class='logo'>
+
+  <div class="logo">
     <img src=images/tac.jpg>
   </div>
 
