fixing logo size

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,9 +1,9 @@
 body {
   // background: orange;
 
-  .tac {
-    width: 23%;
-  }
+  // .tac {
+  //   width: 23%;
+  // }
 
   #container {
     padding: 2em;
