--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,5 +1,5 @@
 body {
-  // background: orange;
+  background: orange;
 
   // .tac {
   //   width: 23%;
@@ -13,7 +13,7 @@ body {
     text-align: center;
 
     header {
-      background: lightgreen;
+      // background: lightgreen;
       // display: grid;
       // grid-template-columns: auto auto;
       // grid-template-areas: 'name nav';
@@ -24,7 +24,7 @@ body {
 
 
       h1 {
-        background: hotpink;
+        // background: hotpink;
         // grid-area: name;
         font-size: 7em;
         font-weight: normal;
