working on social media links

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,12 +1,16 @@
   </div><!--container-->
+  <footer>
+    <div class="logo">
+      <img src=images/oac.png>
+    </div>
+    <div class="tac">
+      <img src=images/tac.jpg>
+    </div>
 
-  <div class="logo">
-    <img src=images/oac.png>
-  </div>
-
-  <div class="tac">
-    <img src=images/tac.jpg>
-  </div>
+    <nav>
+         {% include nav.html %}
+    </nav>
+  </footer>
 
 </body>
 </html>
