--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -84,7 +84,7 @@ body {
 
          nav {
           background: lightyellow;
-          grid-area: nav;
+          // grid-area: nav;
           justify-self: right;
           margin-top: 7px;
 
