--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -85,8 +85,7 @@ body {
          nav {
           background: lightyellow;
           // grid-area: nav;
-          justify-self: right;
-          margin-top: 7px;
+          align-items: flex-start;
 
           a {
             color: black;
