--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -89,7 +89,7 @@ body {
 
           a {
             color: black;
-            display: block;
+            // display: block;
             font-size: 1em;
             margin-bottom: .7em;
             padding-right: 20px;
