--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -85,11 +85,11 @@ body {
          nav {
           // background: lightyellow;
           // grid-area: nav;
-          align-items: flex-start;
+          // align-items: flex-start;
 
           a {
             color: black;
-            // display: block;
+            display: block;
             font-size: 1em;
             margin-bottom: .7em;
             padding-right: 20px;
