using basic.sass to try and fix nav bar to make it vertical

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -20,6 +20,7 @@ a,
 a:visited
   color: darkblue
   text-decoration: none
+  display: block
 
 a:hover
   cursor: pointer
@@ -27,3 +28,7 @@ a:hover
 
 .tac
   width: 23%
+
+footer
+  display: flex;
+  justify-content: space-between;
