--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -22,6 +22,9 @@ a:visited
   text-decoration: none
   display: block
 
+a
+  display: block
+
 a:hover
   cursor: pointer
   // text-decoration: underline
