fixed syntax errors is sass file

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -33,5 +33,5 @@ a:hover
   width: 23%
 
 footer
-  display: flex;
-  justify-content: space-between;
+  display: flex
+  justify-content: space-between
