using display: block to try and get links to display vertically

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -8,9 +8,9 @@ body {
   #container {
     padding: 2em;
     max-width: 1200px;
-     display: flex;
-    justify-content: center;
-    text-align: center;
+    // display: flex;
+    // justify-content: center;
+    // text-align: center;
 
     header {
       // background: lightgreen;
