--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <li>
+  <li class="links">
     <a class='fa fa-twitter'   href=https://twitter.com/lisasmolkin>    <span>@lisasmolkin</span></a>
     <a class='fa fa-instagram' href=https://instagram.com/lisasmolkin/> <span>@lisasmolkin</span></a>
     <a class='fa fa-vimeo'     href=https://vimeo.com/user48322110>     <span>Lisa Smolkin</span></a>
