--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -16,6 +16,10 @@ p
   margin-bottom: 1em
   text-align: left
 
+.links
+  text-decoration: none
+  display: block
+
 a,
 a:visited
   color: darkblue
@@ -23,6 +27,7 @@ a:visited
 
 a
   display: block
+  text-decoration: none
 
 
 a:hover
