--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -22,7 +22,7 @@ p
 
 a,
 a:visited
-  color: darkblue
+  color: black
   text-decoration: none
 
 a
@@ -39,7 +39,7 @@ a:hover
 
 footer
   display: flex
-  justify-content: space-between
+  justify-content: space-around
 
 .fa
   display: block !important
