trying to change location of bio image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,8 +18,10 @@
       <br>
       <br>
 
-      <img src=/images/lisa.jpg>
+  <!--     <img src=/images/lisa.jpg> -->
       {{ content }}
+  <img src=/images/lisa.jpg>
+
     </section>
   </main>
 
