--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -41,8 +41,8 @@ a:hover
 footer
   display: flex
   justify-content: space-around
-  width: 90%;
-  margin-left: 5%;
+  width: 90%
+  margin-left: 5%
 
 .fa
   display: block !important
