trying to change font

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -38,6 +38,10 @@ a:hover
 .tac
   width: 23%
 
+span
+  font-family: helvetica, arial, sans-serif
+
+
 footer
   display: flex
   justify-content: space-around
