trying to get span font to helvetica

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -39,13 +39,14 @@ a:hover
   width: 23%
 
 span
-  font-family: helvetica, arial, sans-serif
+  font-family: helvetica, arial,
+  // font-family: helvetica, arial, sans-serif
 
 
 footer
   display: flex
   justify-content: space-around
-
+  margin-top: 10%
 
 .fa
   display: block !important
