--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -90,7 +90,7 @@ body {
             padding-right: 20px;
 
             span {
-              // font-family: helvetica, arial, sans-serif;
+              font-family: helvetica, arial;
               margin-left: 1em;
             } //span
           } //a
