--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -39,7 +39,8 @@ a:hover
   width: 23%
 
 span
-  font-family: helvetica, arial,
+
+  font-family: helvetica,arial,sans-serif
   // font-family: helvetica, arial, sans-serif
 
 
