--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -90,7 +90,7 @@ body {
             padding-right: 20px;
 
             span {
-              font-family: helvetica, arial;
+              font-family: helvetica,arial,sans-serif;
               margin-left: 1em;
             } //span
           } //a
