testing adding font family in span html

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,14 @@
 <nav>
   <li class="links">
-    <a class='fa fa-twitter'   href=https://twitter.com/lisasmolkin>    <span>@lisasmolkin</span></a>
+    <a class='fa fa-twitter'   href=https://twitter.com/lisasmolkin>
+    <span style="font-family:'helvetica';">@lisasmolkin</span></a>
+
     <a class='fa fa-instagram' href=https://instagram.com/lisasmolkin/> <span>@lisasmolkin</span></a>
     <a class='fa fa-vimeo'     href=https://vimeo.com/user48322110>     <span>Lisa Smolkin</span></a>
     <a class='fa fa-envelope'  href=mailto:lisasmolkin@gmail.com>       <span>lisasmolkin@gmail.com</span></a>
   </li>
 </nav>
+
+
+
+p style="font-family:'yourfont'
