trying to make social media font helvetica

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -38,9 +38,8 @@ a:hover
 .tac
   width: 23%
 
-span
-
-  // font-family: helvetica, arial, sans-serif
+span.fa
+  font-family: helvetica, arial, sans-serif
 
 
 footer
