--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,9 +3,14 @@
     <a class='fa fa-twitter'   href=https://twitter.com/lisasmolkin>
     <span style="font-family:'helvetica';">@lisasmolkin</span></a>
 
-    <a class='fa fa-instagram' href=https://instagram.com/lisasmolkin/> <span>@lisasmolkin</span></a>
-    <a class='fa fa-vimeo'     href=https://vimeo.com/user48322110>     <span>Lisa Smolkin</span></a>
-    <a class='fa fa-envelope'  href=mailto:lisasmolkin@gmail.com>       <span>lisasmolkin@gmail.com</span></a>
+    <a class='fa fa-instagram' href=https://instagram.com/lisasmolkin/>
+    <span style="font-family:'helvetica';">@lisasmolkin</span></a>
+
+    <a class='fa fa-vimeo'     href=https://vimeo.com/user48322110>
+    <span style="font-family:'helvetica';">Lisa Smolkin</span></a>
+
+    <a class='fa fa-envelope'  href=mailto:lisasmolkin@gmail.com>
+    <span style="font-family:'helvetica';">lisasmolkin@gmail.com</span></a>
   </li>
 </nav>
 
