trying to move lisa image

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -38,8 +38,8 @@ a:hover
 .tac
   width: 23%
 
-span.fa
-  font-family: helvetica, arial, sans-serif
+// span.fa
+//   font-family: helvetica, arial, sans-serif
 
 
 footer
