--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
       <br>
       <br>
 
-      <img src=/images/lisa.jpg>
+<!--       <img src=/images/lisa.jpg> -->
       {{ content }}
 
     </section>
