--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,19 +1,11 @@
 
-<!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-  /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>                    
-
 
 <div class="mc-field-group">
   <h3>Webinar Ooooof</h3>
-  <p> Direct sign-up link for online performance <a href="https://zoom.us/webinar/register/WN_5DDbmsJRQWihlvrSXfZvug">Webinar Ooooof</a>. Registration is mandatory!</p>
+  <p>Direct sign-up link for online performance
+    <a href="">Webinar Ooooof</a>. Registration is mandatory!
+  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
-
-<!--End mc_embed_signup-->                                      
 
 
                           
