centering webinar info

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,10 +1,10 @@
 
 
-<div class="mc-field-group">
+<div class="webinar">
   <h3>Webinar Ooooof</h3>
   <p>Direct sign-up link for online performance
-    <a href="">Webinar Ooooof</a>. Registration is mandatory!
-  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+    <a href="https://zoom.us/webinar/register/WN_5DDbmsJRQWihlvrSXfZvug">Webinar Ooooof</a>. Registration is mandatory!
+  
 </div>
 
 
