centering webinar info

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -2,8 +2,8 @@
 
 <div class="webinar">
   <h3>Webinar Ooooof</h3>
-  <p>Direct sign-up link for online performance
-    <a href="https://zoom.us/webinar/register/WN_5DDbmsJRQWihlvrSXfZvug">Webinar Ooooof</a>. Registration is mandatory!
+
+  <p>Direct sign-up link for online performance <a href="https://zoom.us/webinar/register/WN_5DDbmsJRQWihlvrSXfZvug">Webinar Ooooof</a>. Registration is mandatory!
   
 </div>
 
