--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -84,12 +84,13 @@ body {
          nav {
           // background: lightyellow;
           // grid-area: nav;
-          li a {
+          li a, a:visited {
             color: black;
             display: block;
             font-size: 1em;
             margin-bottom: .7em;
             padding-right: 20px;
+            text-decoration: none
 
             span {
               // font-family: helvetica, arial, sans-serif;
