trying to change link color for webinar

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -20,6 +20,15 @@ p
   text-decoration: none
   display: block
 
+a,
+a:visited
+  text-decoration: none
+
+a
+  color: black
+  display: block
+  text-decoration: none
+
 
 a:hover
   cursor: pointer
