--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -41,6 +41,9 @@ body {
           li a {
             color: red;
           }
+          li a:hover {
+            color: darkred;
+          }
       }
       li a {
         color: red;
