--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,37 @@
   </header>
 
   <main>
-    <img src=images/lisa-shrugs.gif>
+    <div class="home-images">
+      <div class="gender-container splotch">
+        <div class="words">Gender?</div>
+        <img src="images/splotch-gender.png">
+      </div>
+      <div class="generational-container splotch">
+        <!-- <div class="words">Gender?</div> -->
+        <img src="images/splotch-generational.png">
+      </div>
+      <div class="health-container splotch">
+        <!-- <div class="words">Gender?</div> -->
+        <img src="images/splotch-health.png">
+      </div>
+      <div class="neurotypical-container splotch">
+        <!-- <div class="words">Gender?</div> -->
+        <img src="images/splotch-neurotypical.png">
+      </div>
+      <div class="race-container splotch">
+        <!-- <div class="words">Gender?</div> -->
+        <img src="images/splotch-race.png">
+      </div>
+      <div class="religion-container splotch">
+        <!-- <div class="words">Gender?</div> -->
+        <img src="images/splotch-religion.png">
+      </div>
+      <div class="unresolved-container splotch">
+        <!-- <div class="words">Gender?</div> -->
+        <img src="images/splotch-unresolved.png">
+      </div>
+      <img src=images/lisa-shrugs.gif>
+    </div>
 
     <section id=bio>
 
