--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -41,6 +41,14 @@
 
 @media (max-width: 1000px) {
   body #container {
+    .splotch {
+      width: 200px !important;
+    }
+
+    .words {
+      font-size: 16px !important;
+    }
+
     width: 640px;
     padding: 0;
 
@@ -117,6 +125,14 @@
   body {
     #container {
       width: 100%;
+
+      .splotch {
+        width: 100px !important;
+      }
+
+      .words {
+        font-size: 8px !important;
+      }
 
       header {
         // background: orange;
